Upgrade to gradle 7.2, move checkMaxTags to PostApi, simplify CommandUtil